flowc/tests/fixtures/resolve_redeclaration.expected.err
tests/fixtures/resolve_redeclaration.flow:2:1: error[E120]: redeclaration of 'User'
tests/fixtures/resolve_redeclaration.flow:1:1: note: 'User' first declared here
