flowc/tests/fixtures/resolve_redeclaration.flow
type User = { id: string }
type User = { name: string }
